# backup-rs

./: .gitignore  Cargo.toml  README.md  build.ps1
backupper/: Cargo.toml  main_logging_conf.yaml
backupper/src/: backup.rs  cli_args.rs  common.rs  config.rs  delete.rs  dialog.rs  main.rs  reschedule.rs  restore.rs  scheduler.rs
backupper/src/dialog/: windows.rs
backupper/src/scheduler/: windows.rs
backupper/test_dir/: general_config.json
backupper/test_dir/backup_test/content/dir1/dir1_1/: ente.md  excluded.txt
backupper/test_dir/backup_test/content/dir1/dir1_2/: excluded.sh  included_anyways.txt
backupper/test_dir/backup_test/content/dir2/: fusch2.txt
backupper/test_dir/backup_test/profile_configs/: 1611b2bd-aa78-4ef6-94db-19ec3416a460.json  537147ba-5d36-48ee-a31f-6c1246eb7e82.json
backupper/test_dir/invalid_profile_configs/: 844363df-ca09-4852-b46f-9df90aa8d209.json  Törtchen.json
backupper/test_dir/tasks/: openStackOverflow.bat
backupper/test_dir/valid_profile_configs/: 18bb168e-0e68-432a-8401-e290e0f1a97e.json  25c81c5c-5595-486b-a504-f40839ffb6af.json  6f41ec8a-da22-4e77-9a9c-50d18556375f.json  844363df-ca09-4852-b46f-9df90aa8d209.json
config/: Cargo.toml  build.rs
config/proto/: profile_config.proto
config/src/: general_config.rs  global_config.rs  interval.rs  lib.rs  profile_config.rs
config/src/interval/: date_time_match.rs  months.rs  specifier.rs  weekdays.rs
config/test_tmp/: 001a828a-30ca-4b12-9756-6ce9696ac868.json  read_test.json
installation/: backupper-server.cmd  install.ps1  (+1 more)
server/: Cargo.toml  general_config.json  logging_conf.yaml
server/frontend/: .eslintrc.json  Message.ts  package-lock.json  package.json
server/frontend/src/: styles.scss  vars.scss
server/frontend/src/app/: api-service.service.spec.ts  api-service.service.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  message.service.ts  profile-config.ts
server/frontend/src/app/config-editor/: config-editor.component.html  config-editor.component.scss  config-editor.component.ts
server/frontend/src/app/config-editor/config-info/: config-info.component.html  config-info.component.scss  config-info.component.ts
server/frontend/src/app/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
server/frontend/src/app/message-banner/: message-banner.component.html  message-banner.component.scss  message-banner.component.ts
server/frontend/src/app/profile-creator/: profile-creator.component.html  profile-creator.component.scss  profile-creator.component.ts
server/frontend/src/app/side-nav/: side-nav.component.html  side-nav.component.scss  side-nav.component.ts
server/src/: api.rs  cli_args.rs  errors.rs  main.rs
(+17 files in other folders)
