[package]
name = "backupper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
clap = { version = "4.1", features = ["derive"] }
uuid = { version = "1.3", features = ["v4", "fast-rng", "serde"] }