[package]
name = "backupper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
clap = { version = "4.1", features = ["derive"] }
uuid = { version = "1.3", features = ["v4", "fast-rng", "serde"] }
chrono = "0.4"
windows = { version = "0.46", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
zip = "0.6.4"
