[package]
name = "config"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "fast-rng", "serde"] }
derive_builder = "0.12"
chrono = {version = "0.4", features = ["serde"] }

bytes = { version = "1.4", optional = true }
prost = { version = "0.11", optional = true }

[build-dependencies]
prost-build = { version = "0.11", optional = true }

[features]
protobuf = [ "dep:bytes", "dep:prost", "dep:prost-build" ]

