[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
uuid = { version = "1.3", features = ["v4", "fast-rng"] }
clap = { version = "4.1", features = ["derive"] }
log = "0.4"
log4rs = { version = "1.2" }

[dependencies.tokio]
features = ["process"]
